@@ -4,7 +4,9 @@
 	match a Perl regular expression specified in the model.
 	* AnyId.pm: Likewise, added warn_if_key_match and 
 	warn_unless_key_match. 
-	
+	* Value.pm: added warn parameter. Unconditionaly issue a warning with
+	a string specified in the model. Mostly usefull for deprecated or accept'ed 
+	parameters
 
 2010-09-30 Dominique Dumont  <domi.dumont@free.fr> 1.210
 	* renamed config-edit-dep5 in config-edit-dpkg-copyright
